# splitter

./: .gitmodules  CMakeLists.txt  main.cpp
include/: ISplitter.h
src/: CMakeLists.txt  client_storage.cpp  client_storage.h  frame_buffer.cpp  frame_buffer.h  isplitter_impl.cpp  isplitter_impl.h
test/: CMakeLists.txt
test/include/: definitions.h
test/src/: multi_threaded_test.cpp  single_thread_test.cpp
